# mail-backup-checker

./: .env.example  .gitignore  README.md  README_ru.md  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/database/: functions.py  session.py
app/database/enums/: enums.py
app/database/models/: models.py
app/mail/: monitor.py  notifier.py  parser.py
app/schemas/: schemas.py
config/: config.py
