[project]
name = "mail-backup-checker"
version = "0.1.0"
description = "Mail.ru backup notification monitor with SQLite and SMTP alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioimaplib>=2.0.1",
    "aiosmtplib>=3.0.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
